--- a/Nikki_Xamarin/Nikki_Xamarin.UWP/App.xaml
+++ b/Nikki_Xamarin/Nikki_Xamarin.UWP/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Nikki_Xamarin.UWP.App"
+    x:Class="Genuino101_Xamarin.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Nikki_Xamarin.UWP"
+    xmlns:local="using:Genuino101_Xamarin.UWP"
     RequestedTheme="Light">
 
 </Application>
