--- a/Nikki_Xamarin/Nikki_Xamarin/App.xaml
+++ b/Nikki_Xamarin/Nikki_Xamarin/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Nikki_Xamarin.App">
+             x:Class="Genuino101_Xamarin.App">
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
