--- a/Nikki_Xamarin/Nikki_Xamarin/MainPage.xaml
+++ b/Nikki_Xamarin/Nikki_Xamarin/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Nikki_Xamarin"
-             x:Class="Nikki_Xamarin.MainPage">
+             xmlns:local="clr-namespace:Genuino101_Xamarin"
+             x:Class="Genuino101_Xamarin.MainPage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Seeking Connection" x:Name="HeaderLabel"
